revision
>> input_string=input("print the phrase:structured programming:")
print the phrase:structured programming:rsd
>>>
>>>
>>> string="pass"
>>> input_string=input("enter a string:")
enter a string:"structured programming"
>>> if string==input_string:
...     print("the strings are the same")
...     else:
...         print("the strings are not the same")
...
  File "<python-input-16>", line 3
    else:
    ^^^^
SyntaxError: invalid syntax
>>> else:
  File "<python-input-17>", line 1
    else:
    ^^^^
SyntaxError: invalid syntax
>>> if string==input_string:
...     print("the strings are the same")
...
>>> else:
  File "<python-input-19>", line 1
    else:
    ^^^^
SyntaxError: invalid syntax
(f-search `')






















































































































































































































































































































































































































































































































































































































